# final-project-idk

./: README.md
keylogger/: .gitignore  Cargo.toml  client_id.json
keylogger/src/: events.rs  keys.rs  main.rs  notification.rs  parser.rs
