[package]
name = "keylogger"
version = "0.1.0"
authors = ["Peter <choupete@github.com>"]

[dependencies]
chrono = "0.4"
regex = "1.0"
libc  = "*"
google-calendar3 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
notify-rust = "3"
lazy_static = "1.2.0"
